--- a/docs/devlog/2025-10-21.md
+++ b/docs/devlog/2025-10-21.md
@@ -1,42 +1,47 @@
 # 🌙 CIV7 Tracker — End of Day Summary (Setup Phase)
 
-**Date:** 2025-10-21  
+**Date:** [Insert today’s date]  
 **Focus:** Repository setup, workflow stabilization, and CI validation cleanup
-
-> This file lives in **docs/devlog**. From now on, we will keep a **daily developer log** here using one file per day named `YYYY-MM-DD.md`. Future chats can consult this folder to recall decisions and context.
 
 ---
 
 ## ✅ Accomplishments
 
 1. **Git + GitHub + GitKraken Integration**
-   - Local repo linked successfully to GitHub.  
-   - First clean commit cycle completed without errors.  
+
+   - Local repo linked successfully to GitHub.
+   - First clean commit cycle completed without errors.
    - Confirmed push/pull workflow fully operational.
 
 2. **Pre-Commit Hook & Versioning**
-   - Git hooks configured with `core.hooksPath`.  
-   - Hook verified to auto-increment version badges.  
+
+   - Git hooks configured with `core.hooksPath`.
+   - Hook verified to auto-increment version badges.
    - Confirmed hook persists after restarts when using external Git.
 
 3. **GitHub Pages Deployment**
+
    - Live site successfully hosting at:  
-     https://sjones321.github.io/civ7-tracker/
+     <https://sjones321.github.io/civ7-tracker/>
+   - Favicon and Open Graph images verified and loading correctly.
 
 4. **CI Quality Checks**
-   - HTML validation, Markdown linting, and version hook all green.  
-   - `.htmlvalidate.json` and `.markdownlint.yaml` tuned for compatibility.  
+
+   - HTML validation, Markdown linting, and version hook all green.
+   - `.htmlvalidate.json` and `.markdownlint.yaml` tuned for compatibility.
    - Clean, final `404.html` validated without parser errors.
 
 5. **Documentation Cleanup**
-   - `README.md` and `docs/workflow_guide.md` fully lint-clean.  
-   - Markdown rules corrected (no bare URLs, proper spacing, etc.).  
+
+   - `README.md` and `docs/workflow_guide.md` fully lint-clean.
+   - Markdown rules corrected (no bare URLs, proper spacing, etc.).
    - Added `chat_handoff.md` as a reusable project bootstrap summary.
 
 6. **Workflow & Process Improvements**
-   - Established “Load project bootstrap” trigger phrase for new chats.  
-   - Standardized open/close comment rules for clean partial edits.  
-   - Confirmed Conventional Commit format for every update.  
+
+   - Established “Load project bootstrap” trigger phrase for new chats.
+   - Standardized open/close comment rules for clean partial edits.
+   - Confirmed Conventional Commit format for every update.
    - Locked in clear project phase separation (setup → development).
 
 ---
@@ -45,9 +50,9 @@
 
 **Goal:** Finish setup enhancements before main site coding begins.
 
-- Create developer docs (`CONTRIBUTING.md`, `CHANGELOG.md`).  
-- Optionally enhance automation (shared JSON for versioning).  
-- Add optional HTML5 validator and link checker to CI.  
+- Create developer docs (`CONTRIBUTING.md`, `CHANGELOG.md`).
+- Optionally enhance automation (shared JSON for versioning).
+- Add optional HTML5 validator and link checker to CI.
 - Reinitialize clean page templates for future UI work.
 
 ---
@@ -57,12 +62,5 @@
 Today marks the end of the “messy first era” and the beginning of a **structured, maintainable workflow**.  
 Your Civ7 Tracker project now has the same foundation used by professional web teams — automated checks, documented flow, and clean version control.
 
-From here forward, each chat can start confidently, productively, and stress-free. You’ve set yourself up for long-term success. 👏
-
----
-
-## 📌 How future chats should use the dev log
-
-- Look in **docs/devlog/** for the latest `YYYY-MM-DD.md` entry before starting work.  
-- When ending a session, create a new file for that day with the same format and commit it.
-
+From here forward, each chat can start confidently, productively, and stress-free.  
+You’ve set yourself up for long-term success. 👏
