lint fix on devlog for todays date.

--- a/docs/devlog/2025-11-01.md
+++ b/docs/devlog/2025-11-01.md
@@ -1,10 +1,16 @@
-- Merged PR #9 — Add World Wonders data editor.
+## Task
+Harden markdown linting and make the devlog writer emit lint-safe spacing so PRs don’t fail on MD022/MD032.
 
-## ðŸ“œ Commit Digest (2025-11-01)
+## Why
+Markdownlint runs on the merge result of PR + main. If a devlog on main has bad spacing, unrelated PRs fail. We need CI to guard main and the devlog script to produce compliant blocks.
 
-- f5209f7 2025-11-01 [skip ci] Add devlog entry for PR #9 - 80e1982 2025-11-01 feat: add world wonders data editor (#9)
+## Changes (must)
 
-# 🌓 Daily Summary
-- Focus: World Wonders data editor MVP (CRUD, ownership stats, icon-keyword placeholders)
-- Notable PRs: data-wonders editor + store wiring
-- Notes: Placeholder [food]/[production] substitution in place; global icon library planned next
+1) Workflow: run markdownlint on push and PR
+- In `.github/workflows/markdownlint.yml`:
+  ```yaml
+  on:
+    push:
+      branches: [ main ]
+    pull_request:
+      branches: [ main ]
