docs(devlog): add backbone planning entry for remote storage and hosting

--- a/docs/devlog/2025-11-01.md
+++ b/docs/devlog/2025-11-01.md
@@ -1,15 +1,27 @@
+## Task
 
-- Merged PR #9 — Add World Wonders data editor.
+Harden markdown linting and make the devlog writer emit lint-safe spacing so PRs don’t fail on MD022/MD032.
 
-## 📎 Commit Digest (2025-11-01)
+## Why
 
-- f5209f7 2025-11-01 [skip ci] Add devlog entry for PR #9
-- 80e1982 2025-11-01 feat: add world wonders data editor (#9)
+Markdownlint runs on the merge result of PR + main. If a devlog on main has bad spacing, unrelated PRs fail. We need CI to guard main and the devlog script to produce compliant blocks.
+
+## Changes (must)
+
+1) Workflow: run markdownlint on push and PR
+
+- In `.github/workflows/markdownlint.yml`:
+
+  ```yaml
+  on:
+    push:
+      branches: [ main ]
+    pull_request:
+      branches: [ main ]
 
 # 🌓 Daily Summary
 
-- Focus: World Wonders data editor MVP (CRUD, ownership stats, icon-keyword placeholders)
-- Notable PRs: data-wonders editor + store wiring
-- Notes: Placeholder [food]/[production] substitution in place; global icon library planned next
-- Merged PR #10 — feat: refine World Wonders editor with ages and ownership logging.
-- Merged PR #11 — Hardening markdownlint automation and devlog spacing.
+- Focus: Planning full remote data backbone and hosting transition.
+- Discussion: Migrate from localStorage to a shared remote database with adapter pattern.
+- Outcome: Will evaluate Vercel + Supabase for hosting and storage; alternative options include Firebase or Cloudflare Workers.
+- Next: Begin new chat “Backbone — Hosting, Remote Storage, and Data Adapter” for architecture decisions.
