feat: consolidate data editors into unified tabbed interface and clean up non-Civ7 files
- Consolidate all 9 entity editors into single data-editor.html with tab navigation
- Extract shared CSS into css/editors.css with CSS variables for consistency
- Fix duplicate IDs across tabs by prefixing with entity type
- Add Clear Game Stats functionality for World Wonders and Natural Wonders
- Fix type filter button styling for Tech/Civics tab
- Update all JS modules to use unique IDs for unified editor
- Remove pihole folder and files (unrelated to Civ7 project)
- Clear markdownlint output file

--- a/docs/learning-log/2025-11-03.md
+++ b/docs/learning-log/2025-11-03.md
@@ -165,3 +165,57 @@ var formData = {
 
 **Why This Matters:** Look for repetitive manual workflows and automate them early. Physical buttons (Stream Deck) are even better than keyboard shortcuts for frequently-used actions.
 
+---
+
+## Pattern Replication Accelerates Development
+
+**Context:** Built 6 data editors in one session after establishing a consistent pattern with the first editor.
+
+**Lesson:** Once you've solved the hard problems (form layout, data conversion, autocomplete integration, dynamic field builders), replicating that pattern becomes dramatically faster. The key is:
+
+1. **Establish the pattern with the first complex editor** - Take time to get it right, debug all edge cases
+2. **Extract reusable code patterns** - Dynamic builders, autocomplete setup, form validation
+3. **Replicate rapidly** - Copy the structure, adapt fields, test incrementally
+
+**What Made This Work:**
+
+- Consistent form layout (left panel: form, right panel: table)
+- Reusable effects/bonuses builder (copy-paste with minimal changes)
+- Autocomplete component already abstracted (just change entity type)
+- Database conversion pattern established (convertFromDb/convertToDb)
+
+**Time Breakdown:**
+
+- First editor (World Wonders): ~2-3 hours (establishing patterns, debugging)
+- Subsequent editors: ~30-45 minutes each (pattern replication)
+
+**Why This Matters:** When building multiple similar features, invest extra time in the first one to establish patterns. The time saved on subsequent features more than pays for the initial investment.
+
+---
+
+## Schema Name Discrepancies Require Careful Mapping
+
+**Context:** Leader table uses `picture_url` but frontend expected `icon_url`, causing save failures.
+
+**Lesson:** Database column names don't always match frontend expectations. When writing conversion functions, **always check the actual database schema** before assuming field names. Don't guess - verify.
+
+**Solution Pattern:**
+
+```javascript
+// Check database schema first, then map correctly
+convertLeaderFromDb(row) {
+  return {
+    iconUrl: row.picture_url || '',  // Database uses picture_url
+    // ... other fields
+  };
+}
+
+convertLeaderToDb(leader) {
+  return {
+    picture_url: leader.iconUrl || '',  // Map back to database column name
+    // ... other fields
+  };
+}
+```
+
+**Why This Matters:** Schema discrepancies will happen, especially when databases were created before frontend code. Always verify actual column names in the database before writing conversion functions. Consider creating a schema reference document.
